dgm-lib v1.2.7
 * Changed dgm::Animation::setSpeed/getSpeed to work with unsigned numbers
 * Updated dgm::Buffer interface with nodiscard, const and noexcept specifiers
 * Fixed a bug where resizing dgm::Buffer after initialization would not update capacity value
 * Added setRotation/getRotation/rotateBy methods to dgm::ps::Particle
 * Optimized all of dgm::Collision::basic code for speed
 * PDB file is now packaged alongside library
 * Internal:
	* Integrated with Google Benchmark
	* Added sandbox project for visual testing

dgm-lib v1.1.1
 * Added dgm::ps::Particle::despawn method
 * Allow poping of arbitrary number of states per frame

dgm-lib v1.1.0
 * Fix edge case in dgm::Clip when boundaries were the same as frame size and frame offset was nonzero
 * Added dgm::AppState::restoreFocus
 * Bump to dsh 1.7.0 with LevelD::Path support
 * Reworked dgm::AppState::draw logic
	* Added dgm::AppState::getClearColor
 * Fixed broken assert in TileMap.cpp

dgm-lib v1.0.0
 * Extracted library from DGM repo
 * Added unit tests
 * Reworked memory allocation for dgm::App
 * Added transparent AppStates
 * Reworked particle system implementation
 * Behavioral bugfixes to dgm::Clip
 * Interface keyword refactors