@@ -1,3 +1,6 @@
+dgm-lib v1.x.x
+ * Changed dgm::Animation::bindSprite to accept a reference
+
 dgm-lib v1.2.7
  * Changed dgm::Animation::setSpeed/getSpeed to work with unsigned numbers
  * Updated dgm::Buffer interface with nodiscard, const and noexcept specifiers
